src/test/ui/regions/regions-in-structs-anon.stderr
error[E0106]: missing lifetime specifier
  --> $DIR/regions-in-structs-anon.rs:4:8
   |
LL |     x: &isize
   |        ^ expected lifetime parameter

error: aborting due to previous error

For more information about this error, try `rustc --explain E0106`.
